samples/_failures_safe/1761358697_a12ca5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca0c0ed6.c: In function ‘main’:
./samples/SAFE/__tmp_ca0c0ed6.c:160: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ca0c0ed6.c:159:5: error: expected declaration or statement at end of input
  159 |     if
      |     ^~
